<resources>
    <string name="app_name">Backgammon</string>
    <string name="start_new_game">Start new game</string>
    <string name="continue_game">Continue game</string>
    <string name="settings">Settings</string>
    <string name="hall_of_fame">Hall of fame</string>

    <string name="title_activity_game">GameActivity</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_activity_hall_of_fame">HallOfFameActivity</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="human">Human</string>
    <string name="cpu">CPU</string>
    <string name="sound_on">Sound: on</string>
    <string name="sound_off">Sound: off</string>
    <string name="confirm">Confirm</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="roll_dice">Roll dice</string>

    <string name="title_activity_game_history">GameHistoryActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="clear">Clear</string>
</resources>
