<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.ac.bg.etf.pmu.bn140314d.backgammon.gui.SettingsActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/player_1_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/player_1" />

            <Switch
                android:id="@+id/player_1_bot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onSwitch1Clicked" />

            <TextView
                android:id="@+id/player_1_bot_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/human" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/player_2_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/player_2" />

            <Switch
                android:id="@+id/player_2_bot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onSwitch2Clicked" />

            <TextView
                android:id="@+id/player_2_bot_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/human" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/prev_board"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/arrow_left"
                android:onClick="onLeftBoardClicked" />

            <ImageView
                android:id="@+id/board_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@drawable/game_board_red_white_icon" />

            <Button
                android:id="@+id/next_board"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/arrow_right"
                android:onClick="onRightBoardClicked" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/prev_checkers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/arrow_left"
                android:onClick="onLeftCheckersClicked" />

            <ImageView
                android:id="@+id/checker_1_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/yoda" />

            <ImageView
                android:id="@+id/checker_2_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/stormtrooper" />

            <Button
                android:id="@+id/next_checkers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/arrow_right"
                android:onClick="onRightCheckersClicked" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sound_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/sound_on" />

            <Switch
                android:id="@+id/sound"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onSoundSwitchClicked" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:onClick="onConfirmClicked"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
